<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <EditText
            android:id="@+id/R_nombre_usuario"
            android:hint="@string/R_nombre_usuario"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/R_correo"
            android:hint="@string/R_correo"
            android:inputType="textEmailAddress"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <EditText
            android:id="@+id/R_contrasena"
            android:hint="@string/R_contrasena"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <EditText
            android:id="@+id/R_confirmar_contrasena"
            android:hint="@string/R_confirmar_contrasena"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/Btn_registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_registrarse"
            android:layout_marginTop="15dp"/>


    </LinearLayout>





</RelativeLayout>