<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">
        
        <EditText
            android:id="@+id/L_email"
            android:hint="@string/L_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/L_contrasena"
            android:hint="@string/L_contrasena"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/Btn_iniciar_sesion"
            android:text="@string/Btn_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>




</RelativeLayout>